# avatars-mcp

./: .gitattributes  .gitignore  AGENTS.md  AUTO_CONFLICT_STRATEGY.md  Agents.md  BASE_AGENTS.md  Cargo.toml  INSTRUCTIONS.md  Makefile  README.md  REPO_AGENTS.md  SPECIFICATION.md  init-container.sh  init-ephemeral-container.sh  mcp.json  pre-task.sh  repo-setup.sh  setup.sh  specification.md  static.json
.docs/: README.md  SPECIFICATION.md
.github/: AGENTS.md
avatars/: ANALYST.md  ARCHITECT.md  DEVELOPER.md  DEVOPS.md  SECURITY.md  TECH_LEAD.md  TESTER.md  analyst.md  architect.md  catalog.json  developer.md  devops.md  devops_maintainer.md  index.json  security.md  tester.md
crates/core/: Cargo.toml
crates/core/src/: lib.rs
docs/: AVATAR_AUDIT.md  CRATE_GUIDE.md  INSTRUCTIONS.md  PERSONA_AUDIT.md  SPECIFICATION.md  TOOLS.md  ZIZMOR_AUDIT.md
notes/: setup_log.md
personas/: ANALYST.md  DEVELOPER.md  DEVOPS.md  RELIABILITY.md  TESTER.md  catalog.json
scenarios/: ARCHITECTURE_AUDIT.md  BUILD_AND_CI_REVIEW.md  DEPENDENCY_REFRESH.md  DEVELOPER_EXPERIENCE.md  DEVSECOPS_AUDIT.md  DOCUMENTATION_CONTRACTS.md  DUPLICATION_REUSE.md  PERFORMANCE_HOTSPOTS.md  RUST_IDIOMS.md  TEST_COVERAGE.md  catalog.json
scripts/: BaseInitialization.sh  FullInitialization.sh  PretaskInitialization.sh  SPECIFICATION.md  agent-commit.sh  agent-sync.sh  bootstrap-cached-container.sh  bootstrap-ephemeral-container.sh  bootstrap-full-initialization.sh  bootstrap-split-initialization-cached-base.sh  bootstrap-split-initialization-pretask.sh  build-pages.sh  fetch_avatar_assets.sh  (+9 more)
(+13 files in other folders)
