[package]
name = "avatars_generator"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
walkdir = "2"
leptos = { version = "0.5", optional = true }
tokio = { version = "1", features = ["full"] }
rust-mcp-schema = "0.7"

[[bin]]
name = "mcp_server"
path = "src/server.rs"
