[package]
name = "avatars_generator"
version = "0.1.0"
edition = "2024"
default-run = "avatars_generator"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "mcp_server"
path = "src/server.rs"

[dev-dependencies]
tempfile = "3"
