[package]
name = "codex-tools-core"
version = "0.1.0"
edition = "2024"
default-run = "generate-catalog"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "generate-catalog"
path = "src/bin/generate_catalog.rs"
